--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ body {
 scrollbar-width: none;
 }
 
+.site-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 header {
   height: 110px;
   display: flex;
@@ -33,6 +39,12 @@ header .site-logo {
   font-size: 25px;
 }
 
+a.active-link {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #161616;
+}
+
 header a {
   text-decoration: none;
   color: #4D4D4D;
@@ -43,6 +55,22 @@ header a {
 header a:hover {
   color: #161616;
   text-decoration: underline;
+}
+
+main {
+  margin-bottom: 84px;
+}
+
+footer {
+  background-color: #161616;
+  color: #AAAAAA;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
 }
 
 .link-button {
@@ -64,7 +92,7 @@ header a:hover {
 
 /*** HOME PAGE ***/
 .home-container {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("./pages/assets/images/home-hero.png") no-repeat center center;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("./pages//assets/images/home-hero.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -294,12 +322,4 @@ i[class*='van-type-'] {
   color: #161616;
   text-decoration: underline;
   font-weight: 600;
-}
-
-footer {
-  background-color: #161616;
-  color: white;
-  text-align: center;
-  font-size: 14px;
-  line-height: 50px;
 }
